// Code generated by template. DO NOT EDIT.
syntax = "proto3";

package receiptpb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./receiptpb";

message Model {
  uint64 id = 1;
  string externalIdentifier = 2;
  google.protobuf.Timestamp dateTime = 3;
  int64 fiscalDocumentNumber = 4;
  string fiscalDriveNumber = 5;
  int64 fiscalSign = 6;
  int32 sum = 7;
  string kktReg = 8;
  string buyerPhoneOrAddress = 9;
}

message GetListRequest {
  int32 page_size = 1;
  int32 page = 2;
  string sort_by = 3;
  string sort_order = 4;
  // filters
  string external_identifier = 5;
  google.protobuf.Timestamp date_time_start = 6;
  google.protobuf.Timestamp date_time_end = 7;
  int64 fiscal_document_number_eq = 8;
  int64 fiscal_document_number_gt = 9;
  int64 fiscal_document_number_lt = 10;
  string fiscal_drive_number = 11;
  int64 fiscal_sign_eq = 12;
  int64 fiscal_sign_gt = 13;
  int64 fiscal_sign_lt = 14;
  int32 sum_eq = 15;
  int32 sum_gt = 16;
  int32 sum_lt = 17;
  string kkt_reg = 18;
  string buyer_phone_or_address = 19;
}

message GetListResponse {
  int64 total = 1;
  repeated Model items = 2;
}

message GetItemRequest {
  uint64 id = 1;
}

message GetItemResponse {
  Model item = 1;
}

message CreateItemRequest {
  Model item = 1;
}

message CreateItemResponse {
  Model item = 1;
}

message UpdateItemRequest {
  uint64 id = 1;
  Model item = 2;
}

message UpdateItemResponse {
  Model item = 1;
}

message DeleteItemRequest {
  uint64 id = 1;
}

message DeleteItemResponse {
}

service ModelService {
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts"
    };
  }
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/api/v1/receipts/{id}"
    };
  }
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts"
      body: "item"
    };
  }
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receipts/{id}"
      body: "item"
    };
  }
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
    option (google.api.http) = {
      delete: "/api/v1/receipts/{id}"
    };
  }
}
